Bug Squash Anterior: 45 faltando

--- a/johnatas-henrique/css/estilo.css
+++ b/johnatas-henrique/css/estilo.css
@@ -5,19 +5,19 @@
 
 @font-face {
   font-family: animeace;
-  src: url('../fonts/animeace2_reg.ttf');
+  src: url( '../fonts/animeace2_reg.ttf' );
 }
 
 @font-face {
   font-family: animeace;
-  src: url('../fonts/animeace2_bld.ttf');
+  src: url( '../fonts/animeace2_bld.ttf' );
   font-weight: 700;
 }
 
 body {
-  font-family: animeace, sans-serif;
-  background-image: url('../imagens/bg.jpg');
-  background-color: rgba(255, 255, 255, 0.45);
+  font-family: animeace , sans-serif;
+  background-image: url( '../imagens/bg.jpg' );
+  background-color: rgba( 255 , 255 , 255 , 0.45 );
   background-blend-mode: lighten;
 }
 
@@ -26,8 +26,8 @@ body {
   -webkit-text-stroke: 1px black;
   font-size: 3em;
   color: white;
-  text-shadow: 3px 3px 0 black, -1px -1px 0 black,
-    1px -1px 0 black, 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , 1px 1px 0 black;
 }
 
 .centralizar {
@@ -47,8 +47,8 @@ body {
   font-weight: 700;
   -webkit-text-stroke: 1px black;
   color: white;
-  text-shadow: 3px 3px 0 black, -1px -1px 0 black,
-    1px -1px 0 black, 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , 1px 1px 0 black;
 }
 
 .caixa-texto-input {
@@ -69,7 +69,7 @@ body {
   z-index: -1;
 }
 
-.esconder-caixa+label {
+.esconder-caixa + label {
   font-size: 1.25em;
   font-weight: 700;
   color: black;
@@ -79,8 +79,8 @@ body {
   margin: 0 auto;
 }
 
-.esconder-caixa:focus+label,
-.esconder-caixa+label:hover {
+.esconder-caixa:focus + label ,
+.esconder-caixa + label:hover {
   background-color: red;
   color: white;
 }
@@ -113,13 +113,15 @@ body {
   font-size: 2em;
   -webkit-text-stroke: 1px black;
   color: white;
-  text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
 }
 
 .rodape {
   -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: white;
-  text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
   font-size: 1.1em;
   margin-bottom: 40px;
 }
@@ -129,13 +131,14 @@ body {
   margin-top: 5px;
 }
 
-.voltar-topo,
+.voltar-topo ,
 .voltar-topo:visited {
   text-decoration: none;
   font-weight: 700;
   -webkit-text-stroke: 1px black;
   -webkit-text-fill-color: white;
-  text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  text-shadow: 3px 3px 0 black , -1px -1px 0 black ,
+    1px -1px 0 black , -1px 1px 0 black , 1px 1px 0 black;
   margin: 50px 0 0;
 }
 
